defconfig: Enable System V IPC, mqueues, and all namespaces
- System V IPC is useful for programs such as fakeroot
 - POSIX Message Queues (mqueue) are another form of IPC used by some
   programs such as nsenter
 - Namespaces can be used to isolate system resources as part of a
   container

These features are useful for creating isolated chroots capable of
running conventional Linux distributions on a phone while simultaneously
running Android.

Signed-off-by: Danny Lin <danny@kdrag0n.dev>

--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -25,8 +25,10 @@ CONFIG_CPUSETS=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_BPF=y
 CONFIG_NAMESPACES=y
-# CONFIG_UTS_NS is not set
-# CONFIG_PID_NS is not set
+CONFIG_UTS_NS=y
+CONFIG_PID_NS=y
+CONFIG_IPC_NS=y
+CONFIG_USER_NS=y
 CONFIG_SCHED_TUNE=y
 CONFIG_CPUSET_ASSIST=y
 CONFIG_CPUSET_AUDIO_APP="0-3,5-6"
@@ -696,3 +698,9 @@ CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_MACH_XIAOMI_RAPHAEL=y
+# aicp
+CONFIG_SYSVIPC=y
+CONFIG_SYSVIPC_SYSCTL=y
+CONFIG_SYSVIPC_COMPAT=y
+CONFIG_POSIX_MQUEUE=y
+CONFIG_POSIX_MQUEUE_SYSCTL=y
