--- a/arch/arm64/configs/raphael_defconfig
+++ b/arch/arm64/configs/raphael_defconfig
@@ -658,6 +658,7 @@ CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
 CONFIG_PSTORE_RAM=y
+# CONFIG_BLOCK_UNWANTED_FILES is not set
 CONFIG_PRINTK_TIME=y
 CONFIG_FRAME_WARN=6144
 CONFIG_STRIP_ASM_SYMS=y
